Added multi-admin support in the MessagesHandler: application can now handle multiple administrators